--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@vality/deanonimus-proto",
   "version": "2.0.0",
   "scripts": {
-    "codegen": "thrift-codegen --i ./proto --n deanonimus --t deanonimus --p /wachter"
+    "codegen": "thrift-codegen --i ./proto --n deanonimus"
   },
   "publishConfig": {
     "access": "public",
